New video, side by side

--- a/tr/less/768up.less
+++ b/tr/less/768up.less
@@ -126,6 +126,20 @@ p {
 			}
 		}
 	}
+
+	.gonullu-destekciler {
+		.videos {
+			a {
+				width: 40%;
+				max-width: 400px;
+				.thumb {
+					.cell {
+						font-size: 15px;
+					}
+				}
+			}
+		}
+	}
 	.partnerler {
 		a {
 			img {
